Actions
Bug #9297
closedin.telnetd: comparison between pointer and zero character constant
Start date:
2018-03-17
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Issue found by gcc 7 build:
in.telnetd.c:3049:21: error: comparison between pointer and zero character constant [-Werror=pointer-compare] if (getenv("USER") == '\0' && auth_status < AUTH_USER) ^~ in.telnetd.c:3049:6: note: did you mean to dereference the pointer? if (getenv("USER") == '\0' && auth_status < AUTH_USER) ^ cc1: all warnings being treated as errors
Updated by Electric Monk over 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit bda17ea5bfa19b1156570d93d7f66218b2c16cec
commit bda17ea5bfa19b1156570d93d7f66218b2c16cec Author: Toomas Soome <tsoome@me.com> Date: 2018-03-25T17:31:59.000Z 9297 in.telnetd: comparison between pointer and zero character constant Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Approved by: Gordon Ross <gwr@nexenta.com>
Actions