9297 in.telnetd: comparison between pointer and zero character constant Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Approved by: Gordon Ross <gwr@nexenta.com>